[gd_scene load_steps=40 format=2]

[ext_resource path="res://Font/mplus_hzk_12.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Texture/Buttons_12.png" type="Texture" id=2]
[ext_resource path="res://Texture/Buttons_14.png" type="Texture" id=3]
[ext_resource path="res://UI/LoginUI.gd" type="Script" id=4]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_11.png" type="Texture" id=5]
[ext_resource path="res://Texture/Pre-made characters/Boxer.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_07.png" type="Texture" id=7]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_18.png" type="Texture" id=8]
[ext_resource path="res://Texture/arrowSilver_left.png" type="Texture" id=9]
[ext_resource path="res://Texture/arrowSilver_right.png" type="Texture" id=10]
[ext_resource path="res://Texture/arrowBlue_left.png" type="Texture" id=11]
[ext_resource path="res://Texture/arrowBlue_right.png" type="Texture" id=12]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_15.png" type="Texture" id=13]
[ext_resource path="res://UI/GameUI.gd" type="Script" id=14]
[ext_resource path="res://UI/CreateUI.gd" type="Script" id=15]
[ext_resource path="res://Font/123_max.fnt" type="BitmapFont" id=16]
[ext_resource path="res://UI/ControlUI/MainUi.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/ControlUI/BagUI.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/ControlUI/MapUi.tscn" type="PackedScene" id=19]
[ext_resource path="res://UI/ControlUI/PartyUI.tscn" type="PackedScene" id=22]
[ext_resource path="res://Font/SC-Medium.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://Shaders/SimpleBlur.tres" type="Material" id=36]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 6
outline_color = Color( 0.713726, 0.768627, 0.619608, 1 )
extra_spacing_char = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 133, 34 )
margin_bottom = 2.45886

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="DynamicFont" id=24]
size = 20
outline_color = Color( 0.396078, 0.388235, 0.388235, 1 )
extra_spacing_top = 4
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=28]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=29]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
outline_size = 2
outline_color = Color( 0.439216, 0.376471, 0.313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 17
outline_size = 2
outline_color = Color( 0.505882, 0.47451, 0.47451, 1 )
extra_spacing_top = 4
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="DynamicFont" id=25]
outline_size = 2
outline_color = Color( 0.368627, 0.364706, 0.364706, 1 )
font_data = ExtResource( 30 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 132, 133 )
margin_left = 26.0
margin_right = 30.0
margin_top = 25.0
margin_bottom = 26.0

[node name="GameUi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoginUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -253.5
margin_top = 112.0
margin_right = 253.5
margin_bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "秘境森林冒险队"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -24.0
margin_right = 93.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "开始游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 72.0
margin_right = 93.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "账号登录"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 176.04
margin_right = 93.0
margin_bottom = 244.04
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "结束游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="LoginUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -582.0
margin_top = -94.5
margin_right = -251.0
margin_bottom = 153.5
mouse_filter = 0
texture = ExtResource( 13 )
patch_margin_left = 31
patch_margin_top = 32
patch_margin_right = 26
patch_margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clound" type="Label" parent="LoginUI/NinePatchRect"]
anchor_left = 0.41
anchor_top = 0.487
anchor_right = 0.41
anchor_bottom = 0.487
margin_left = -118.71
margin_top = -85.776
margin_right = 177.29
margin_bottom = 3.224
custom_colors/font_color = Color( 0.396078, 0.388235, 0.388235, 1 )
custom_fonts/font = SubResource( 24 )
text = "暂无存档"
autowrap = true

[node name="clound2" type="Label" parent="LoginUI/NinePatchRect"]
anchor_left = 0.41
anchor_top = 0.487
anchor_right = 0.41
anchor_bottom = 0.487
margin_left = -118.21
margin_top = 17.8081
margin_right = 177.79
margin_bottom = 48.8081
custom_colors/font_color = Color( 0.396078, 0.388235, 0.388235, 1 )
custom_fonts/font = SubResource( 24 )
text = "每天仅可上传2次，下载1次"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="download" type="Button" parent="LoginUI/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.5
margin_top = 57.0
margin_right = 151.5
margin_bottom = 108.0
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "下载存档"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="download2" type="Button" parent="LoginUI/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = 57.0
margin_right = -31.5
margin_bottom = 108.0
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "上传存档"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -110.5
margin_right = 195.0
margin_bottom = 247.5
mouse_filter = 0
texture = ExtResource( 13 )
patch_margin_left = 31
patch_margin_top = 32
patch_margin_right = 26
patch_margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoginUI/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -145.0
margin_right = 171.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0.396078, 0.388235, 0.388235, 1 )
custom_fonts/font = SubResource( 24 )
text = "这是一个测试版的游戏，内容完成度只有50%左右，后续内容玩法会慢慢的更新，如果有疑问可以加群反馈。
QQ群：705229764
（点击这里关闭弹窗）"
autowrap = true

[node name="Label2" type="Label" parent="LoginUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.396078, 0.388235, 0.388235, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/normal = SubResource( 27 )
text = "正在开发中，敬请期待！
玩家可以自行设计：
地图关卡、怪物数据、装备数据、游戏道具、游戏技能，游戏情节对话等等功能！
让游戏变成正真的模拟器！"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="LoginUI"]
visible = false
material = ExtResource( 36 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoginUI/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -16.5
margin_right = 672.0
margin_bottom = 16.5
custom_fonts/font = SubResource( 29 )
text = "正在取回存档"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CreateUI"]
material = ExtResource( 36 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.33484
margin_bottom = -1.33484
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="role" type="Sprite" parent="CreateUI"]
position = Vector2( 434.515, 444.141 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CreateUI/role"]
position = Vector2( 2.99997, -83 )
scale = Vector2( 3, 3 )
frames = ExtResource( 6 )
animation = "Idle"
playing = true

[node name="attr" type="Sprite" parent="CreateUI"]
position = Vector2( 434.349, 179.955 )
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="CreateUI/attr"]
margin_left = -213.0
margin_top = -40.0
margin_right = -106.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 8 )
text = "攻击"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_hp" type="Label" parent="CreateUI/attr"]
margin_left = -144.396
margin_top = -106.963
margin_right = -38.3962
margin_bottom = -80.963
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 16 )
text = "100"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_atk" type="Label" parent="CreateUI/attr"]
margin_left = -96.0
margin_top = -40.0
margin_right = -29.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_mtk" type="Label" parent="CreateUI/attr"]
margin_left = -96.0
margin_top = 4.0
margin_right = -29.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_def" type="Label" parent="CreateUI/attr"]
margin_left = -96.0
margin_top = 48.0
margin_right = -29.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_speed" type="Label" parent="CreateUI/attr"]
margin_left = 108.0
margin_top = -40.0
margin_right = 175.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_crit" type="Label" parent="CreateUI/attr"]
margin_left = 108.0
margin_top = 4.0
margin_right = 175.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_mdef" type="Label" parent="CreateUI/attr"]
margin_left = 108.0
margin_top = 48.0
margin_right = 175.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_lv" type="Label" parent="CreateUI/attr"]
margin_left = 149.291
margin_top = -106.963
margin_right = 190.291
margin_bottom = -75.963
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 16 )
text = "900"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CreateUI/attr"]
margin_left = -213.0
margin_top = 2.67584
margin_right = -106.0
margin_bottom = 38.6758
custom_fonts/font = SubResource( 8 )
text = "魔力"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CreateUI/attr"]
margin_left = -213.0
margin_top = 47.0453
margin_right = -106.0
margin_bottom = 83.0453
custom_fonts/font = SubResource( 8 )
text = "物免"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CreateUI/attr"]
margin_left = -9.58948
margin_top = -41.0
margin_right = 97.4105
margin_bottom = -5.0
custom_fonts/font = SubResource( 8 )
text = "速度"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="CreateUI/attr"]
margin_left = -9.58948
margin_top = 2.67584
margin_right = 97.4105
margin_bottom = 38.6758
custom_fonts/font = SubResource( 8 )
text = "暴击"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="CreateUI/attr"]
margin_left = -9.58948
margin_top = 47.0453
margin_right = 97.4105
margin_bottom = 83.0453
custom_fonts/font = SubResource( 8 )
text = "魔免"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="CreateUI"]
margin_left = 289.953
margin_top = 383.203
margin_right = 329.953
margin_bottom = 423.203
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="CreateUI"]
margin_left = 544.515
margin_top = 383.203
margin_right = 584.515
margin_bottom = 423.203
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Sprite" parent="CreateUI"]
position = Vector2( 439, 533 )
texture = ExtResource( 8 )

[node name="Label8" type="Label" parent="CreateUI/name"]
margin_left = -50.0
margin_top = -18.0
margin_right = 57.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "黑袍法师"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="NinePatchRect" parent="CreateUI"]
margin_left = 813.0
margin_top = 60.0
margin_right = 1123.0
margin_bottom = 437.0
texture = ExtResource( 13 )
patch_margin_left = 21
patch_margin_top = 31
patch_margin_right = 26
patch_margin_bottom = 26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="CreateUI/content"]
margin_left = 26.3303
margin_top = 21.6719
margin_right = 265.33
margin_bottom = 68.6719
custom_fonts/font = SubResource( 9 )
text = "职业介绍："
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreateUI/content"]
margin_left = 26.0
margin_top = 77.0
margin_right = 284.0
margin_bottom = 348.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CreateUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 202.334
margin_top = 207.141
margin_right = 394.334
margin_bottom = 275.141
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "创建人物"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="CreateUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 207.0
margin_top = -178.0
margin_right = 386.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
align = 1
max_length = 7
placeholder_text = "请输入小队名称"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUi" parent="." instance=ExtResource( 17 )]
visible = false

[node name="MapUi" parent="." instance=ExtResource( 19 )]
visible = false

[node name="BagUI" parent="." instance=ExtResource( 18 )]
visible = false

[node name="PartyUI" parent="." instance=ExtResource( 22 )]
visible = false

[node name="temp_skill_icon" type="TextureRect" parent="."]
visible = false
margin_right = 60.0
margin_bottom = 60.0
expand = true

[connection signal="gui_input" from="." to="." method="_on_GameUi_gui_input"]
[connection signal="pressed" from="LoginUI/Button" to="LoginUI" method="_on_Button_pressed"]
[connection signal="pressed" from="LoginUI/Button3" to="LoginUI" method="_on_Button3_pressed"]
[connection signal="pressed" from="LoginUI/Button2" to="LoginUI" method="_on_Button2_pressed"]
[connection signal="pressed" from="LoginUI/NinePatchRect/download" to="LoginUI" method="_on_download_pressed"]
[connection signal="pressed" from="LoginUI/NinePatchRect/download2" to="LoginUI" method="_on_download2_pressed"]
[connection signal="gui_input" from="LoginUI/NinePatchRect2" to="LoginUI" method="_on_NinePatchRect2_gui_input"]
[connection signal="pressed" from="CreateUI/left" to="CreateUI" method="_on_left_pressed"]
[connection signal="pressed" from="CreateUI/right" to="CreateUI" method="_on_right_pressed"]
[connection signal="pressed" from="CreateUI/Button" to="CreateUI" method="_on_Button_pressed"]
[connection signal="visibility_changed" from="PartyUI" to="PartyUI" method="_on_PartyUI_visibility_changed"]
